--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--Article and Section elements were used like this below since there are headings for each different box-->
     <article class="content">
         <section class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="notepad on a desk with the letters 's' 'e' 'o' in the middle and the words 'content' 'headings' 'mobile compatability' 'social media' 'link building' and 'backlink' around it class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="notepad on a desk with the letters 's' 'e' 'o' in the middle and the words 'content' 'headings' 'mobile compatability' 'social media' 'link building' and 'backlink' around it" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
