modified css to consolidate redundancy

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
     <figure class="hero"></figure>
     <!--Article and Section elements were used like this below since there are headings for each different box-->
     <article class="content">
-        <section class="search-engine-optimization">
+        <section class="content-main">
             <img src="./assets/images/search-engine-optimization.jpg" alt="notepad on a desk with the letters 's' 'e' 'o' in the middle and the words 'content' 'headings' 'mobile compatability' 'social media' 'link building' and 'backlink' around it" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section class="content-main">
             <img src="./assets/images/online-reputation-management.jpg" alt="laptop on a desk with the word 'reputation' at the top and graphs underneath it" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section class="content-main">
             <img src="./assets/images/social-media-marketing.jpg" alt="table with people sitting around it with many icons and words scattered across the table" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -53,21 +53,21 @@
     </article>
     <!--Aside was used since the box was to the side of the main section | Sections were used since there are headings for each section-->
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="benefits-main">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="a funnel with a gear going in the top and money coming out the bottom"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefits-main">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="a person wearing a tie with a lightbulb for a head"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefits-main">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="a gear with coins around it"/>
             <p>
